--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,13 +76,6 @@ docs = [
     "ipython",
     "ipykernel"
 ]
-lint = [
-  "black[jupyter]>=22.6.0",
-  "mdformat>0.7",
-  "mdformat-gfm>=0.3.5",
-  "ruff>=0.0.156"
-]
-typing = ["mypy>=0.990"]
 all = ["nbconvert[qtpdf,webpdf,test,serve,docs]"]
 
 [project.scripts]
@@ -126,12 +119,19 @@ test = "python -m pytest -vv --cov nbconvert --cov-branch --cov-report term-miss
 nowarn = "test -W default {args}"
 
 [tool.hatch.envs.typing]
-features = ["typing", "test"]
+features = ["typing"]
+typing = ["mypy>=0.990"]
 [tool.hatch.envs.typing.scripts]
 test = "mypy --install-types --non-interactive {args:nbconvert}"
 
 [tool.hatch.envs.lint]
-features = ["lint"]
+dependencies = [
+  "black[jupyter]==22.1-.0",
+  "mdformat>0.7",
+  "mdformat-gfm>=0.3.5",
+  "ruff==0.0.178"
+]
+detached = true
 [tool.hatch.envs.lint.scripts]
 style = [
   "ruff {args:.}",
@@ -206,7 +206,7 @@ ignore = [
   # Line too long
   "E501",
   # Relative imports are banned
-  "I252",
+  "TID252",
   # Boolean ... in function definition
   "FBT001", "FBT002",
   # Module level import not at top of file
