--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,7 +126,7 @@ test = "mypy --install-types --non-interactive {args:nbconvert}"
 
 [tool.hatch.envs.lint]
 dependencies = [
-  "black[jupyter]==22.1-.0",
+  "black[jupyter]==22.10.0",
   "mdformat>0.7",
   "mdformat-gfm>=0.3.5",
   "ruff==0.0.178"
