add top level timeout

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,7 @@ defaults:
 jobs:
   tests:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
     env:
       NBFORMAT_VALIDATOR: jsonschema
     strategy:
