--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "defusedxml",
     "importlib_metadata>=3.6;python_version<\"3.10\"",
     "jinja2>=3.0",
-    "jupyter_core>=4.7",
+    "jupyter_core>=4.12,!=5.0.*",
     "jupyterlab_pygments",
     "MarkupSafe>=2.0",
     "mistune>=2.0.3,<3",
