--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ script = "nbconvert.exporters:ScriptExporter"
 [project.optional-dependencies]
 qtpng = ["pyqtwebengine>=5.15"]
 qtpdf = ["nbconvert[qtpng]"]
-webpdf = ["pyppeteer>=1,<1.1"]
+webpdf = ["playwright>=1.27"]
 test = [
     "pytest",
     "pytest-dependency",
@@ -66,7 +66,7 @@ test = [
     "ipywidgets>=7",
     "pre-commit",
     "pytest-timeout",
-    "pyppeteer>=1,<1.1",
+    "nbconvert[webpdf]",
 ]
 serve = ["tornado>=6.1"]
 docs = [
