try only installing on ubunut

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,9 @@ jobs:
           # pandoc is not up to date in the ubuntu repos, so we install directly
           wget https://github.com/jgm/pandoc/releases/download/2.14.2/pandoc-2.14.2-1-amd64.deb && sudo dpkg -i pandoc-2.14.2-1-amd64.deb
 
+          pip install ."[webpdf]"
+          playwright install chrome
+
       - name: Run tests on Linux
         if: ${{ startsWith(runner.os, 'linux') }}
         run: |
