--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,37 +21,56 @@ jobs:
       NBFORMAT_VALIDATOR: jsonschema
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        python-version: ["3.7", "3.10"]
+        os: ["macos-latest", "windows-latest"]
+        python-version: ["3.7", "3.11"]
         include:
           - os: "windows-latest"
             python-version: "3.8"
-          - os: "ubuntu-latest"
+          - os: "macos-latest"
             python-version: "3.9"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
 
-      - name: Install Linux dependencies
-        if: startsWith(runner.os, 'Linux')
-        run: |
-          sudo apt-get update
-          sudo apt-get install texlive-plain-generic inkscape texlive-xetex latexmk
-          sudo apt-get install xvfb x11-utils libxkbcommon-x11-0  libxcb-xinerama0 python3-pyqt5
-
-          # pandoc is not up to date in the ubuntu repos, so we install directly
-          wget https://github.com/jgm/pandoc/releases/download/2.14.2/pandoc-2.14.2-1-amd64.deb && sudo dpkg -i pandoc-2.14.2-1-amd64.deb
-
-      - name: Run tests on Linux
-        if: ${{ startsWith(runner.os, 'linux') }}
-        run: |
-          xvfb-run --auto-servernum hatch run cov:test
-
-      - name: Run tests on other platforms
-        if: ${{ !startsWith(runner.os, 'linux')  }}
+      - name: Run tests
         run: |
           hatch run cov:test
+
+      - name: Code coverage
+        run: |
+          pip install codecov coverage[toml]
+          codecov
+
+  linux_tests:
+    timeout-minutes: 20
+    runs-on: ubuntu-latest
+    env:
+      NBFORMAT_VALIDATOR: jsonschema
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.11"]
+      fail-fast: false
+    defaults:
+      run:
+        shell: bash -l {0}
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Depenedencies
+        run: |
+          conda install -y pandoc xvfbwrapper inkscape latexmk texlive-core pyqt5 hatch coverage pytest-cov
+          pip install -e .[all]
+
+      - name: Run tests
+        run: |
+          xvfb-run --auto-servernum python -m pytest -vv --cov nbconvert --cov-branch --cov-report term-missing:skip-covered
 
       - name: Code coverage
         run: |
@@ -144,6 +163,7 @@ jobs:
   tests_check: # This job does nothing and is only used for the branch protection
     if: always()
     needs:
+      - linux_tests
       - tests
       - test_lint
       - test_minimum_versions
