--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -70,8 +70,8 @@ jobs:
       - name: Install Depenedencies
         run: |
           sudo apt-get update
-          sudo apt-get install xvfb x11-utils libxkbcommon-x11-0 libxcb-xinerama0
-          conda install -c conda-forge -y pandoc latexmk texlive-core pyqt5-sip hatch coverage pytest-cov
+          sudo apt-get install -y --no-install-recommends '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev
+          conda install -c conda-forge -y pandoc latexmk texlive-core pyqt hatch coverage pytest-cov pyqt<6
           pip install -e .[all]
 
       - name: Run tests
