--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,43 +14,68 @@ defaults:
     shell: bash -eux {0}
 
 jobs:
-  run-tests:
+  tests:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     env:
       NBFORMAT_VALIDATOR: jsonschema
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        python-version: ["3.7", "3.10"]
+        os: ["macos-latest", "windows-latest"]
+        python-version: ["3.7", "3.11"]
         include:
           - os: "windows-latest"
             python-version: "3.8"
-          - os: "ubuntu-latest"
+          - os: "macos-latest"
             python-version: "3.9"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
 
-      - name: Install Linux dependencies
-        if: startsWith(runner.os, 'Linux')
-        run: |
-          sudo apt-get update
-          sudo apt-get install texlive-plain-generic inkscape texlive-xetex latexmk
-          sudo apt-get install xvfb x11-utils libxkbcommon-x11-0  libxcb-xinerama0 python3-pyqt5
+      - name: Install Inkscape on Windows
+        if: ${{ startsWith('windows', matrix.os ) }}
+        run: choco install inkscape
 
-          # pandoc is not up to date in the ubuntu repos, so we install directly
-          wget https://github.com/jgm/pandoc/releases/download/2.14.2/pandoc-2.14.2-1-amd64.deb && sudo dpkg -i pandoc-2.14.2-1-amd64.deb
-
-      - name: Run tests on Linux
-        if: ${{ startsWith(runner.os, 'linux') }}
-        run: |
-          xvfb-run --auto-servernum hatch run cov:test
-
-      - name: Run tests on other platforms
-        if: ${{ !startsWith(runner.os, 'linux')  }}
+      - name: Run tests
         run: |
           hatch run cov:test
+
+      - name: Code coverage
+        run: |
+          pip install codecov coverage[toml]
+          codecov
+
+  linux_tests:
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    env:
+      NBFORMAT_VALIDATOR: jsonschema
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.10"]
+      fail-fast: false
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Depenedencies
+        shell: bash -l {0}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev
+          conda install -c conda-forge -y pandoc latexmk texlive-core pyqt hatch coverage pytest-cov "pyqt<6"
+          pip install -e .[all]
+
+      - name: Run tests
+        shell: bash -l {0}
+        run: |
+          xvfb-run --auto-servernum python -m pytest -vv --cov nbconvert --cov-branch --cov-report term-missing:skip-covered
 
       - name: Code coverage
         run: |
@@ -79,17 +104,23 @@ jobs:
         with:
           ignore_links: 'https://ipywidgets.readthedocs.io/en/latest/examples/Output'
 
-  pre_commit:
-    runs-on: ubuntu-latest
+  test_lint:
+    name: Test Lint
     timeout-minutes: 10
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
-      - uses: jupyterlab/maintainer-tools/.github/actions/pre-commit@v1
+      -  name: Run Linters
+         run: |
+          hatch run typing:test
+          hatch run lint:style
+          pipx run 'validate-pyproject[all]' pyproject.toml
+          pipx run doc8 --max-line-length=200
 
   test_minimum_versions:
     name: Test Minimum Versions
-    timeout-minutes: 20
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -106,7 +137,7 @@ jobs:
   test_prereleases:
     name: Test Prereleases
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
@@ -120,7 +151,7 @@ jobs:
   make_sdist:
     name: Make SDist
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
@@ -130,7 +161,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [make_sdist]
     name: Install from SDist and Test
-    timeout-minutes: 20
+    timeout-minutes: 10
     steps:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - uses: jupyterlab/maintainer-tools/.github/actions/test-sdist@v1
@@ -138,8 +169,9 @@ jobs:
   tests_check: # This job does nothing and is only used for the branch protection
     if: always()
     needs:
-      - run-tests
-      - pre_commit
+      - linux_tests
+      - tests
+      - test_lint
       - test_minimum_versions
       - test_prereleases
       - check_links
