--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,68 +14,43 @@ defaults:
     shell: bash -eux {0}
 
 jobs:
-  tests:
+  run-tests:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
     env:
       NBFORMAT_VALIDATOR: jsonschema
     strategy:
       matrix:
-        os: ["macos-latest", "windows-latest"]
-        python-version: ["3.7", "3.11"]
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        python-version: ["3.7", "3.10"]
         include:
           - os: "windows-latest"
             python-version: "3.8"
-          - os: "macos-latest"
+          - os: "ubuntu-latest"
             python-version: "3.9"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
 
-      - name: Install Inkscape on Windows
-        if: ${{ startsWith('windows', matrix.os ) }}
-        run: choco install inkscape
-
-      - name: Run tests
-        run: |
-          hatch run cov:test
-
-      - name: Code coverage
-        run: |
-          pip install codecov coverage[toml]
-          codecov
-
-  linux_tests:
-    timeout-minutes: 15
-    runs-on: ubuntu-latest
-    env:
-      NBFORMAT_VALIDATOR: jsonschema
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.10"]
-      fail-fast: false
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Depenedencies
-        shell: bash -l {0}
+      - name: Install Linux dependencies
+        if: startsWith(runner.os, 'Linux')
         run: |
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev
-          conda install -c conda-forge -y pandoc latexmk texlive-core pyqt hatch coverage pytest-cov "pyqt<6"
-          pip install -e .[all]
+          sudo apt-get install texlive-plain-generic inkscape texlive-xetex latexmk
+          sudo apt-get install xvfb x11-utils libxkbcommon-x11-0  libxcb-xinerama0 python3-pyqt5
 
-      - name: Run tests
-        shell: bash -l {0}
+          # pandoc is not up to date in the ubuntu repos, so we install directly
+          wget https://github.com/jgm/pandoc/releases/download/2.14.2/pandoc-2.14.2-1-amd64.deb && sudo dpkg -i pandoc-2.14.2-1-amd64.deb
+
+      - name: Run tests on Linux
+        if: ${{ startsWith(runner.os, 'linux') }}
         run: |
-          xvfb-run --auto-servernum python -m pytest -vv --cov nbconvert --cov-branch --cov-report term-missing:skip-covered
+          xvfb-run --auto-servernum hatch run cov:test
+
+      - name: Run tests on other platforms
+        if: ${{ !startsWith(runner.os, 'linux')  }}
+        run: |
+          hatch run cov:test
 
       - name: Code coverage
         run: |
@@ -104,23 +79,17 @@ jobs:
         with:
           ignore_links: 'https://ipywidgets.readthedocs.io/en/latest/examples/Output'
 
-  test_lint:
-    name: Test Lint
-    timeout-minutes: 10
+  pre_commit:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
-      -  name: Run Linters
-         run: |
-          hatch run typing:test
-          hatch run lint:style
-          pipx run 'validate-pyproject[all]' pyproject.toml
-          pipx run doc8 --max-line-length=200
+      - uses: jupyterlab/maintainer-tools/.github/actions/pre-commit@v1
 
   test_minimum_versions:
     name: Test Minimum Versions
-    timeout-minutes: 10
+    timeout-minutes: 20
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -137,7 +106,7 @@ jobs:
   test_prereleases:
     name: Test Prereleases
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
@@ -151,7 +120,7 @@ jobs:
   make_sdist:
     name: Make SDist
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
@@ -161,7 +130,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [make_sdist]
     name: Install from SDist and Test
-    timeout-minutes: 10
+    timeout-minutes: 20
     steps:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - uses: jupyterlab/maintainer-tools/.github/actions/test-sdist@v1
@@ -169,9 +138,8 @@ jobs:
   tests_check: # This job does nothing and is only used for the branch protection
     if: always()
     needs:
-      - linux_tests
-      - tests
-      - test_lint
+      - run-tests
+      - pre_commit
       - test_minimum_versions
       - test_prereleases
       - check_links
