--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "defusedxml",
     "importlib_metadata>=3.6;python_version<\"3.10\"",
     "jinja2>=3.0",
-    "jupyter_core>=4.12,!=5.0.*",
+    "jupyter_core>=4.7",
     "jupyterlab_pygments",
     "MarkupSafe>=2.0",
     "mistune>=2.0.3,<3",
@@ -58,14 +58,14 @@ script = "nbconvert.exporters:ScriptExporter"
 [project.optional-dependencies]
 qtpng = ["pyqtwebengine>=5.15"]
 qtpdf = ["nbconvert[qtpng]"]
-webpdf = ["playwright>=1.27"]
+webpdf = ["pyppeteer>=1,<1.1"]
 test = [
     "pytest",
     "pytest-dependency",
     "ipykernel",
     "ipywidgets>=7",
     "pre-commit",
-    "pytest-timeout",
+    "pyppeteer>=1,<1.1",
 ]
 serve = ["tornado>=6.1"]
 docs = [
@@ -76,7 +76,7 @@ docs = [
     "ipython",
     "ipykernel"
 ]
-all = ["nbconvert[webpdf,test,serve,docs]"]
+all = ["nbconvert[qtpdf,webpdf,test,serve,docs]"]
 
 [project.scripts]
 jupyter-nbconvert = "nbconvert.nbconvertapp:main"
@@ -112,40 +112,14 @@ test = "python -m pytest -vv {args}"
 nowarn = "test -W default {args}"
 
 [tool.hatch.envs.cov]
-features = ["test"]
+features = ["all"]
 dependencies = ["coverage", "pytest-cov"]
 [tool.hatch.envs.cov.scripts]
 test = "python -m pytest -vv --cov nbconvert --cov-branch --cov-report term-missing:skip-covered {args}"
 nowarn = "test -W default {args}"
 
-[tool.hatch.envs.typing]
-features = ["test"]
-dependencies = ["mypy>=0.990"]
-[tool.hatch.envs.typing.scripts]
-test = "mypy --install-types --non-interactive {args:nbconvert}"
-
-[tool.hatch.envs.lint]
-dependencies = [
-  "black[jupyter]==22.10.0",
-  "mdformat>0.7",
-  "mdformat-gfm>=0.3.5",
-  "ruff==0.0.178"
-]
-detached = true
-[tool.hatch.envs.lint.scripts]
-style = [
-  "ruff {args:.}",
-  "black --check --diff {args:.}",
-  "mdformat --check {args:docs *.md}"
-]
-fmt = [
-  "black {args:.}",
-  "ruff --fix {args:.}",
-  "mdformat {args:docs *.md}"
-]
 
 [tool.pytest.ini_options]
-timeout = 100
 markers = "network: marks tests which require network connection"
 addopts = "-raXs --durations 10 --color=yes --doctest-modules --ignore=nbconvert/tests/files/override.py --ignore=nbconvert/tests/files/jupyter_nbconvert_config.py"
 testpaths = [
@@ -182,62 +156,27 @@ exclude_lines = [
 "@(abc\\.)?abstractmethod",
 ]
 
-[tool.black]
-line-length = 100
-skip-string-normalization = true
-target-version = ["py37"]
-extend-exclude = ".*notebook1.ipynb$"
-
-[tool.ruff]
-target-version = "py37"
-line-length = 100
-select = [
-  "A", "B", "C", "E", "F", "FBT", "I", "N", "Q", "RUF", "S", "T",
-  "UP", "W", "YTT",
+[tool.flake8]
+ignore = "E501, W503, E402"
+builtins = "c, get_config"
+exclude = [
+    ".cache",
+    ".github",
+    "docs",
 ]
-ignore = [
-  # Allow non-abstract empty methods in abstract base classes
-  "B027",
-  # Ignore McCabe complexity
-  "C901",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
-  # Use of `assert` detected
-  "S101",
-  # Line too long
-  "E501",
-  # Relative imports are banned
-  "TID252",
-  # Boolean ... in function definition
-  "FBT001", "FBT002",
-  # Module level import not at top of file
-  "E402",
-  # A001/A002/A003 .. is shadowing a python builtin
-  "A001", "A002", "A003",
-  # Possible hardcoded password
-  "S105", "S106",
-  # Q000 Single quotes found but double quotes preferred
-  "Q000",
-  # N806 Variable `B` in function should be lowercase
-  "N806",
-  # T201 `print` found
-  "T201",
-  # N802 Function name `CreateWellKnownSid` should be lowercase
-  "N802", "N803"
+enable-extensions = "G"
+extend-ignore = [
+    "G001", "G002", "G004", "G200", "G201", "G202",
+    # black adds spaces around ':'
+    "E203",
 ]
-unfixable = [
-  # Don't touch print statements
-  "T201",
-  # Don't touch noqa lines
-  "RUF100",
+per-file-ignores = [
+    # B011: Do not call assert False since python -O removes these calls
+    # F841 local variable 'foo' is assigned to but never used
+    "nbconvert/*/tests/*: B011", "F841",
+    "nbconvert/tests/*: B011", "F841",
+    # F401 'foo' imported but unused
+    # F403 'x' used; unable to detect undefined names
+    "nbconvert/*/__init__.py: F401", "F403",
+    "nbconvert/__init__.py: F401", "F403",
 ]
-
-[tool.ruff.per-file-ignores]
- # B011: Do not call assert False since python -O removes these calls
-# F841 local variable 'foo' is assigned to but never used
-"nbconvert/*/tests/*" = ["B011", "F841"]
-"nbconvert/tests/*" = ["B011", "F841"]
-# F401 'foo' imported but unused
-# F403 'x' used; unable to detect undefined names
-"nbconvert/*/__init__.py" = ["F401", "F403"]
-"nbconvert/__init__.py" = ["F401", "F403"]
