--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,6 +57,18 @@ jobs:
           pip install codecov coverage[toml]
           codecov
 
+  test_lint:
+    name: Test Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      -  name: Run Linters
+         run: |
+          hatch run lint:style
+          pipx run 'validate-pyproject[all]' pyproject.toml
+          pipx run doc8 --max-line-length=200  --ignore-path=docs/source/other/full-config.rst
+
   check_release:
     runs-on: ubuntu-latest
     steps:
