--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,12 +20,12 @@ jobs:
       NBFORMAT_VALIDATOR: jsonschema
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        os: ["ubuntu-20.04", "macos-latest", "windows-latest"]
         python-version: ["3.7", "3.10"]
         include:
           - os: "windows-latest"
             python-version: "3.8"
-          - os: "ubuntu-latest"
+          - os: "ubuntu-20.04"
             python-version: "3.9"
       fail-fast: false
     steps:
