always pass relax_add_props=True when validating
avoids crashing on notebooks that have no practical issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,8 @@ testpaths = [
 filterwarnings = [
     "error",
     "ignore:nbconvert.utils.lexers is deprecated as of 5.0:UserWarning",
+    # Pending https://github.com/jupyter/nbformat/pull/343
+    "ignore:`relax_add_props` kwargs of validate has been deprecated for security:DeprecationWarning",
     # Pending https://github.com/jupyter/nbformat/pull/256
     "ignore:Passing a schema to Validator.iter_errors is deprecated:DeprecationWarning",
     # https://github.com/pyppeteer/pyppeteer/issues/342
