add more linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,7 @@ dependencies = [
   "black[jupyter]==22.12.0",
   "mdformat>0.7",
   "mdformat-gfm>=0.3.5",
-  "ruff==0.0.207"
+  "ruff==0.0.237"
 ]
 detached = true
 [tool.hatch.envs.lint.scripts]
@@ -205,40 +205,23 @@ extend-exclude = ".*notebook1.ipynb$"
 target-version = "py37"
 line-length = 100
 select = [
-  "A", "B", "C", "E", "F", "FBT", "I", "N", "Q", "RUF", "S", "T",
-  "UP", "W", "YTT",
+  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
+  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
+  "W", "YTT",
 ]
 ignore = [
-  # Allow non-abstract empty methods in abstract base classes
-  "B027",
-  # C417 Unnecessary `map` usage (rewrite using a generator expression)
-  "C417",
-  # Ignore McCabe complexity
-  "C901",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
-  # Use of `assert` detected
-  "S101",
-  # Line too long
-  "E501",
-  # Relative imports are banned
-  "TID252",
-  # Boolean ... in function definition
-  "FBT001", "FBT002",
-  # Module level import not at top of file
-  "E402",
-  # A001/A002/A003 .. is shadowing a python builtin
-  "A001", "A002", "A003",
-  # Possible hardcoded password
-  "S105", "S106",
   # Q000 Single quotes found but double quotes preferred
   "Q000",
-  # N806 Variable `B` in function should be lowercase
-  "N806",
+  # FBT001 Boolean positional arg in function definition
+  "FBT001", "FBT002", "FBT003",
+  # E501 Line too long (158 > 100 characters)
+  "E501",
+  # SIM105 Use `contextlib.suppress(...)`
+  "SIM105",
   # T201 `print` found
   "T201",
   # N802 Function name `CreateWellKnownSid` should be lowercase
-  "N802", "N803"
+  "N802", "N803",
 ]
 unfixable = [
   # Don't touch print statements
@@ -250,12 +233,17 @@ unfixable = [
 [tool.ruff.per-file-ignores]
  # B011: Do not call assert False since python -O removes these calls
 # F841 local variable 'foo' is assigned to but never used
-"nbconvert/*/tests/*" = ["B011", "F841"]
-"nbconvert/tests/*" = ["B011", "F841"]
+# S101 Use of `assert` detected
+# TID252 Relative imports from parent modules are banned
+# PLR2004 Magic value used in comparison
+"nbconvert/*/tests/*" = ["B011", "F841", "S101", "TID252", "PLR2004"]
+"nbconvert/tests/*" = ["B011", "F841", "S101", "TID252", "PLR2004"]
 # F401 'foo' imported but unused
 # F403 'x' used; unable to detect undefined names
 "nbconvert/*/__init__.py" = ["F401", "F403"]
 "nbconvert/__init__.py" = ["F401", "F403"]
+# PLR2004 Magic value used in comparison
+"nbconvert/filters/ansi.py" = ["PLR2004"]
 
 [tool.interrogate]
 ignore-init-module=true
