--- a/pyproject.toml
+++ b/pyproject.toml
@@ -179,6 +179,10 @@ exclude_lines = [
 "@(abc\\.)?abstractmethod",
 ]
 
+[tool.coverage.run]
+relative_files = true
+source = ["nbconvert"]
+
 [tool.mypy]
 check_untyped_defs = true
 disallow_incomplete_defs = true
