ensure toml support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,7 +113,7 @@ nowarn = "test -W default {args}"
 
 [tool.hatch.envs.cov]
 features = ["all"]
-dependencies = ["coverage", "pytest-cov"]
+dependencies = ["coverage[toml]", "pytest-cov"]
 [tool.hatch.envs.cov.scripts]
 test = "python -m pytest -vv --cov nbconvert --cov-branch --cov-report term-missing:skip-covered {args}"
 nowarn = "test -W default {args}"
