--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,13 +10,14 @@ sphinx:
 
 formats: all
 
-build:
-  image: latest
-
 python:
-  version: 3.8
   install:
     - method: pip
       path: .
       extra_requirements:
         - docs
+
+build:
+  os: ubuntu-22.04
+  tools:
+     python: "3.11"
