--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ urls = {Homepage = "https://jupyter.org"}
 requires-python = ">=3.7"
 dependencies = [
     "beautifulsoup4",
-    "bleach",
+    "bleach!=5.0.0",
     "defusedxml",
     "importlib_metadata>=3.6;python_version<\"3.10\"",
     "jinja2>=3.0",
