--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,12 +23,14 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-20.04", "macos-latest", "windows-latest"]
-        python-version: ["3.7", "3.10"]
+        python-version: ["3.8", "3.11"]
         include:
           - os: "windows-latest"
-            python-version: "3.8"
-          - os: "ubuntu-20.04"
             python-version: "3.9"
+          - os: "macos-latest"
+            python-version: "3.10"
+          - os: "ubuntu-20.04"
+            python-version: "3.12"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
