--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,7 @@ dependencies = [
   "black[jupyter]==23.3.0",
   "mdformat>0.7",
   "mdformat-gfm>=0.3.5",
-  "ruff==0.0.270"
+  "ruff==0.0.276"
 ]
 detached = true
 [tool.hatch.envs.lint.scripts]
@@ -226,6 +226,8 @@ ignore = [
   "T201",
   # N802 Function name `CreateWellKnownSid` should be lowercase
   "N802", "N803",
+  # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
+  "RUF012",
 ]
 unfixable = [
   # Don't touch print statements
