--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,10 +27,8 @@ jobs:
         include:
           - os: "windows-latest"
             python-version: "3.9"
-          - os: "macos-latest"
-            python-version: "3.10"
           - os: "ubuntu-20.04"
-            python-version: "3.12"
+            python-version: "3.10"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -49,7 +47,7 @@ jobs:
       - name: Run tests on Linux
         if: ${{ startsWith(runner.os, 'linux') }}
         run: |
-          xvfb-run --auto-servernum hatch run test:test
+          xvfb-run --auto-servernum hatch run cov:test
 
       - name: Run tests on other platforms
         if: ${{ !startsWith(runner.os, 'linux')  }}
@@ -57,6 +55,15 @@ jobs:
           hatch run cov:test
 
       - uses: jupyterlab/maintainer-tools/.github/actions/upload-coverage@v1
+
+  python312:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+        with:
+          python_version: "3.12"
+      - run: hatch run test:test
 
   coverage:
     runs-on: ubuntu-latest
