--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling >=0.25"]
+requires = ["hatchling >=1.5"]
 build-backend = "hatchling.build"
 
 [project]
@@ -18,7 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 urls = {Homepage = "https://jupyter.org"}
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 dependencies = [
     "beautifulsoup4",
     "bleach!=5.0.0",
@@ -65,6 +65,7 @@ test = [
     "ipykernel",
     "ipywidgets>=7",
     "pre-commit",
+    "flaky"
 ]
 serve = ["tornado>=6.1"]
 docs = [
@@ -163,6 +164,8 @@ filterwarnings = [
     "ignore:unclosed event loop:ResourceWarning",
     # From jupyter_core
     "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
+    # From dateutil
+    "ignore:.*Use timezone-aware objects to represent datetimes in UTC:DeprecationWarning",
 ]
 
 [tool.coverage.report]
