--- a/pyproject.toml
+++ b/pyproject.toml
@@ -263,3 +263,7 @@ exclude = ["*/tests", "docs"]
 
 [tool.repo-review]
 ignore = ["PY007", "PP308", "GH102", "PC140"]
+
+
+[tool.codespell]
+skip = "*.ipynb,*.css,*.tex.j2,*iso639_1.py"
