--- a/pyproject.toml
+++ b/pyproject.toml
@@ -266,4 +266,4 @@ ignore = ["PY007", "PP308", "GH102", "PC140"]
 
 
 [tool.codespell]
-skip = "*.ipynb,*.css,*.tex.j2"
+skip = "*.ipynb,*.css,*.tex.j2,*iso639_1.py,*html.j2,*test_ansi.py"
