--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,6 +29,10 @@ jobs:
             python-version: "3.9"
           - os: "ubuntu-20.04"
             python-version: "3.10"
+          - os: "ubuntu-20.04"
+            python-version: "3.12"
+          - os: "macos-latest"
+            python-version: "3.12"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -55,15 +59,6 @@ jobs:
           hatch run cov:nowarn
 
       - uses: jupyterlab/maintainer-tools/.github/actions/upload-coverage@v1
-
-  python312:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
-        with:
-          python_version: "3.12"
-      - run: hatch run test:test
 
   coverage:
     runs-on: ubuntu-latest
