--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ docs/source/interactive/magics-generated.txt
 docs/gh-pages
 docs/source/CHANGELOG.md
 nbconvert/resources/style.min.css
-nbconvert/tests/files/*.html
+tests/files/*.html
 *.py[co]
 __pycache__
 *.egg-info
