--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ test = [
     "pytest-dependency",
     "ipykernel",
     "ipywidgets>=7",
-    "flaky"
+    "flaky",
 ]
 serve = ["tornado>=6.1"]
 docs = [
@@ -114,7 +114,7 @@ nowarn = "test -W default {args}"
 
 [tool.hatch.envs.typing]
 features = ["test"]
-dependencies = ["mypy>=1.5.1"]
+dependencies = ["mypy>=1.5.1", "traitlets>=5.10"]
 [tool.hatch.envs.typing.scripts]
 test = "mypy --install-types --non-interactive {args}"
 
