--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,21 +120,20 @@ test = "mypy --install-types --non-interactive {args}"
 
 [tool.hatch.envs.lint]
 dependencies = [
-  "black[jupyter]==23.3.0",
   "mdformat>0.7",
   "mdformat-gfm>=0.3.5",
-  "ruff==0.0.287"
+  "ruff==0.1.3"
 ]
 detached = true
 [tool.hatch.envs.lint.scripts]
 style = [
   "ruff {args:.}",
-  "black --check --diff {args:.}",
+  "ruff format {args:.}",
   "mdformat --check {args:docs *.md}"
 ]
 fmt = [
-  "black {args:.}",
   "ruff --fix {args:.}",
+  "ruff format {args:.}",
   "mdformat {args:docs *.md}"
 ]
 
@@ -196,17 +195,16 @@ enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 disable_error_code = ["no-untyped-def", "no-untyped-call"]
 warn_unreachable = true
 
-[tool.black]
-line-length = 100
-skip-string-normalization = true
-target-version = ["py37"]
-extend-exclude = ".*notebook1.ipynb$"
-
 [tool.ruff]
-target-version = "py37"
+target-version = "py38"
 line-length = 100
+
+[tool.ruff.format]
+exclude = [".*notebook1.ipynb$"]
+
+[tool.ruff.lint]
 select = [
-  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
+  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "N",
   "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
   "W", "YTT",
 ]
@@ -233,7 +231,7 @@ unfixable = [
   "RUF100",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
  # B011: Do not call assert False since python -O removes these calls
 # F841 local variable 'foo' is assigned to but never used
 # S101 Use of `assert` detected
