--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,37 +111,24 @@ dependencies = ["coverage[toml]", "pytest-cov"]
 test = "python -m pytest -vv --cov nbconvert --cov-branch --cov-report term-missing:skip-covered {args}"
 nowarn = "test -W default {args}"
 
-[tool.hatch.envs.typing]
-features = ["test"]
-dependencies = ["mypy~=1.6", "traitlets>=5.13.0", "jupyter_core>=5.3.2"]
-[tool.hatch.envs.typing.scripts]
-test = "mypy --install-types --non-interactive {args}"
-
 [tool.hatch.envs.lint]
-dependencies = [
-  "mdformat>0.7",
-  "mdformat-gfm>=0.3.5",
-  "ruff==0.1.3"
-]
 detached = true
+dependencies = ["pre-commit"]
 [tool.hatch.envs.lint.scripts]
-style = [
-  "ruff {args:.}",
-  "ruff format {args:.}",
-  "mdformat --check {args:docs *.md}"
-]
-fmt = [
-  "ruff --fix {args:.}",
-  "ruff format {args:.}",
-  "mdformat {args:docs *.md}"
-]
+build = "pre-commit run --all-files ruff"
+
+[tool.hatch.envs.typing]
+dependencies = [ "pre-commit"]
+detached = true
+[tool.hatch.envs.typing.scripts]
+test = "pre-commit run --all-files --hook-stage manual mypy"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
 xfail_strict = true
 log_cli_level = "info"
 addopts = [
-  "-raXs", "--durations=10", "--color=yes", "--doctest-modules",
+  "-ra", "--durations=10", "--color=yes", "--doctest-modules",
    "--showlocals", "--strict-markers", "--strict-config",
    "--ignore=tests/files/jupyter_nbconvert_config.py",
    "--ignore=tests/files/override.py",
@@ -255,7 +242,7 @@ fail-under=100
 exclude = ["tests", "docs"]
 
 [tool.repo-review]
-ignore = ["PY007", "PP308", "GH102", "PC140"]
+ignore = ["PY007", "GH102"]
 
 
 [tool.codespell]
